k8s/api/gateway/istio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: api-gateway-virtual-service
  namespace: k8s-workshop
spec:
  hosts:
    - "api.k8s-workshop.com"  
    - "api-gateway-service"         # Internal cluster communication ( Istio proxy (sidecar) ) 
  gateways:
    - istio-gateway
    - mesh                        # Require for internal cluster communication
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 3110
        host: api-gateway-service
